ggspectra 0.2.2
===============

Track changes in package 'photobiology' 0.9.16.
Do not force y scale to positive range for raw-counts (they can be negative as
a result of computations).

ggspectra 0.2.1
===============

Track changes in package 'photobiology' 0.9.14.
Add continuous scales with defaults suitable for spectral data, with support
for automatic axis labels both as R-expressions and as LaTeX mark-up.
Add utility functions for SI scale prefixes.
Add utility functions for x-axis-labels and secondary x-axis.
Add utility functions for y-axis-labels.
Update User Guide (add examples of graphical comparison of multiple lists of
wavebands).

ggspectra 0.2.0
===============

Improve handling of annotations parameter in plot() methods.
Add functions ggcolorchart() and black_or_white().
Add statistics stat_wb_box() and stat_wb_column() with "rect" as default geom
and stat_wb_hbar() with "errorbarh" as default geom.
Change default geom from "rect" to "text" in all the summary stats for spectra.
Update stats with "text" as default geom to use an additional variable BW.color
computed by black_or_white() as default mapping for color.
As default geoms and color mapping have changed, this update can break existing
code. Changes to plot() methods are backwards compatible but default color of
some text labels is changed from "white" to "black" to improve readability,
and fewer peaks and valleys are highlighted by default. In addition more ticks
marks are used on the wavelength axis.
Fix minor bugs in handling of color mapping.
Update documentation.

ggspectra 0.1.12 (ver 0.1.11 was not submitted to CRAN)
================

Import ggplot2 in whole as only the most basic use of plot() methods would not
require user access to 'ggplot2'.
Add stat_label_peaks() and stat_label_valleys() which are designed to fully
take advantage of 'geom_text_repel()' and 'geom_label_repel()' as revised
in package 'ggrepel' (>= 0.6.3).